@@ -1,3 +1,9 @@
+2003-08-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* configure.ac: Remove (Merged into ../../configure.ac).
+	* Makefile.am: Reflect having merged configure.ac into
+	../../configure.ac.
+
 2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* configure.ac: Remove AC_CONFIG_AUX_DIR.
